--- a/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
+++ b/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
+        <PackageReference Include="StirlingLabs.BigSpans" Version="21.8.1" />
+        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="21.8.1" />
     </ItemGroup>
 
     <ItemGroup>
