flesh out project
add versioning and coverage

add libsa v22.02.0 binaries

--- a/sockaddr.Net/sockaddr.Net.csproj
+++ b/sockaddr.Net/sockaddr.Net.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>net5.0;net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,8 +13,13 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="InlineIL.Fody" Version="1.7.1" />
+      <PackageReference Include="InlineIL.Fody" Version="1.7.1" PrivateAssets="all" />
+      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
       <PackageReference Include="StirlingLabs.Utilities" Version="22.2.5" />
     </ItemGroup>
+
+    <ImportGroup>
+      <Import Project="../Version.proj" />
+    </ImportGroup>
 
 </Project>
