--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,43 +1,17 @@
-name: Integration
+name: Release
 
 on:
     push:
-        branches:
-            - main
-    workflow_dispatch:
+        tags:
+            - 'v*'
+
+defaults:
+    run:
+        shell: bash
 
 jobs:
-    
-    skip_check:
-        name: Skip Run Check
-        continue-on-error: true
-        runs-on: ubuntu-20.04
-        outputs:
-            should_skip: ${{ steps.skip_check.outputs.should_skip }}
-            is_not_release: ${{ steps.release_check.outputs.is_not_release }}
-        steps:
-            -   name: Check if duplicate action
-                id: skip_check
-                uses: fkirc/skip-duplicate-actions@master
-                with:
-                    skip_after_successful_duplicate: 'true'
-                    paths_ignore: '["**/README.md", ".idea/**", ".editorconfig", ".git*", "docs/**", ".github/**"]'
-            -   name: Full checkout
-                if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
-                uses: actions/checkout@v2
-                with:
-                    fetch-depth: 0
-            -   name: Check if should be release / has version tag
-                id: release_check
-                if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
-                run: |
-                    git describe --exact-match --match='v*' --abbrev=0 --tags ${{ github.sha }} 2>/dev/null \
-                    || echo "::set-output name=is_not_release::true"
-    
     linux:
         name: Linux
-        needs: skip_check
-        if: ${{ (needs.skip_check.outputs.should_skip != 'true') && (needs.skip_check.outputs.is_not_release == 'true') }}
         runs-on: ubuntu-20.04
         steps:
             -   uses: actions/checkout@v2
@@ -64,7 +38,7 @@ jobs:
                         artifacts/*.nupkg
                         coverage
                     if-no-files-found: error
-
+    
     macos:
         name: Mac
         needs: skip_check
@@ -79,8 +53,6 @@ jobs:
             -   uses: actions/setup-dotnet@v1.8.1
                 with:
                     dotnet-version: 6.0.x
-            -   name: NuGet Auth
-                uses: StirlingLabs/GithubNugetAuthAction@main
             -   name: Test
                 run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
 
@@ -98,7 +70,20 @@ jobs:
             -   uses: actions/setup-dotnet@v1.8.1
                 with:
                     dotnet-version: 6.0.x
-            -   name: NuGet Auth
-                uses: StirlingLabs/GithubNugetAuthAction@main
             -   name: Test
                 run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
+
+    create_release:
+        name: Create Release
+        runs-on: ubuntu-20.04
+        needs: [ linux, macos, windows ]
+        steps:
+            -   uses: actions/download-artifact@v2
+                with:
+                    path: artifacts
+            -   name: Create Release
+                uses: softprops/action-gh-release@v0.1.12
+                with:
+                    name: sockaddr.Net
+                    files: |
+                        artifacts/**
