--- a/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
+++ b/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
@@ -3,36 +3,78 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
-
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-
         <RootNamespace>StrlingLabs.Sockaddr.Tests</RootNamespace>
+        <CollectCoverage>true</CollectCoverage>
+        <CoverletOutputFormat>cobertura</CoverletOutputFormat>
+        <CoverletOutput>../coverage/</CoverletOutput>
+        <DeterministicReport>true</DeterministicReport>
+        <DeterministicSourcePaths>true</DeterministicSourcePaths>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
 
+    <Choose>
+        <When Condition="$([MSBuild]::IsOSPlatform('Linux'))">
+            <PropertyGroup>
+                <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+            </PropertyGroup>
+            <ItemGroup>
+                <ProjectReference Include="../libsa.linux-x64/linux-x64.csproj">
+                    <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
+                    <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+                </ProjectReference>
+            </ItemGroup>
+        </When>
+        <When Condition="$([MSBuild]::IsOSPlatform('OSX'))">
+            <PropertyGroup>
+                <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
+            </PropertyGroup>
+            <ItemGroup>
+                <ProjectReference Include="../libsa.osx-x64/osx-x64.csproj">
+                    <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
+                    <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+                </ProjectReference>
+            </ItemGroup>
+        </When>
+        <When Condition="$([MSBuild]::IsOSPlatform('Windows'))">
+            <PropertyGroup>
+                <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+            </PropertyGroup>
+            <ItemGroup>
+                <ProjectReference Include="../libsa.win-x64/win-x64.csproj">
+                    <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
+                    <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+                </ProjectReference>
+            </ItemGroup>
+        </When>
+    </Choose>
+
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-        <PackageReference Include="NUnit" Version="3.13.2" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.0" />
-        <PackageReference Include="StirlingLabs.BigSpans" Version="21.8.1" />
-        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="21.8.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0"/>
+        <PackageReference Include="NUnit" Version="3.13.2"/>
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0"/>
+        <PackageReference Include="coverlet.collector" Version="3.1.0"/>
+        <PackageReference Include="StirlingLabs.BigSpans" Version="21.8.1"/>
+        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="21.8.1"/>
+        <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
+        <PackageReference Include="coverlet.collector" Version="3.1.0" PrivateAssets="all" />
+        <PackageReference Include="coverlet.msbuild" Version="3.1.0" PrivateAssets="all" />
+        <PackageReference Include="ReportGenerator" Version="4.8.12" PrivateAssets="all" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj" />
+        <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj"/>
     </ItemGroup>
-    
-    <ItemGroup Condition="'$(OS)'=='Windows_NT'">
-        <Content Include="..\..\libsa\cmake-build-$(Configuration.ToLowerInvariant())\sa.dll">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <Link>sa.dll</Link>
-        </Content>
-        <Content Include="..\..\libsa\cmake-build-$(Configuration.ToLowerInvariant())\sa.pdb">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-            <Link>sa.pdb</Link>
-        </Content>
-    </ItemGroup>
+
+    <Target Name="GenerateHtmlCoverageReport" AfterTargets="GenerateCoverageResultAfterTest">
+        <!-- generate markdown coverage report and badges -->
+        <ReportGenerator ReportFiles="@(CoverletReport)" ReportTypes="MarkdownSummary;Badges" SourceDirectories="../sockaddr.Net" TargetDirectory="../coverage/" />
+    </Target>
 
 </Project>
