fix missing nuget auth for mac and windows in cd

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,6 +62,8 @@ jobs:
             -   uses: actions/setup-dotnet@v1.8.1
                 with:
                     dotnet-version: 6.0.x
+            -   name: NuGet Auth
+                uses: StirlingLabs/GithubNugetAuthAction@main
             -   name: Test
                 run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
 
@@ -77,6 +79,8 @@ jobs:
             -   uses: actions/setup-dotnet@v1.8.1
                 with:
                     dotnet-version: 6.0.x
+            -   name: NuGet Auth
+                uses: StirlingLabs/GithubNugetAuthAction@main
             -   name: Test
                 run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
 
