add dotnet 6 already exists check for windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,13 @@ jobs:
                     submodules: true
             -   name: Fetch tag git metadata
                 run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
-            -   uses: actions/setup-dotnet@v1.8.1
+            -   name: Check for .NET 6 preinstalled
+                id: dotnet_check
+                run: |
+                    compgen -G "/C/Program Files/dotnet/sdk/6.0.*" \
+                    && echo "::set-output name=has_6_0::true"
+            -   uses: actions/setup-dotnet@v1.9.1
+                if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
                 with:
                     dotnet-version: 6.0.x
             -   name: NuGet Auth
