--- a/libsa.linux-x64/linux-x64.csproj
+++ b/libsa.linux-x64/linux-x64.csproj
@@ -18,6 +18,11 @@
         <IncludeBuildOutput>false</IncludeBuildOutput>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(CI)'!=''">
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageOutputPath>../artifacts</PackageOutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
         <Content Include="libsa.so">
             <Pack>True</Pack>
