--- a/sockaddr.Net/sockaddr.Net.csproj
+++ b/sockaddr.Net/sockaddr.Net.csproj
@@ -18,7 +18,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="InlineIL.Fody" Version="1.7.1" PrivateAssets="all" />
-      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" PrivateAssets="all" />
       <PackageReference Include="StirlingLabs.Utilities" Version="22.2.5" />
     </ItemGroup>
 
