--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -122,3 +122,5 @@ jobs:
                     name: sockaddr.Net
                     files: |
                         artifacts/**
+            -   name: Push NuGet Packages (NuGet.org)
+                run: dotnet nuget push artifacts/**/*.nupkg -k ${{secrets.NUGET_STIRLINGLABS_API_KEY}} -s https://api.nuget.org/v3/index.json -n 1 --skip-duplicate || true
