--- a/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
+++ b/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
@@ -51,16 +51,21 @@
     </Choose>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0"/>
-        <PackageReference Include="NUnit" Version="3.13.2"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0"/>
-        <PackageReference Include="coverlet.collector" Version="3.1.0"/>
-        <PackageReference Include="StirlingLabs.BigSpans" Version="21.8.1"/>
-        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="21.8.1"/>
-        <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+        <PackageReference Include="coverlet.collector" Version="3.1.2" PrivateAssets="all">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="StirlingLabs.BigSpans" Version="22.5.0" />
+        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="22.5.0" />
+        <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="coverlet.collector" Version="3.1.0" PrivateAssets="all" />
-        <PackageReference Include="coverlet.msbuild" Version="3.1.0" PrivateAssets="all" />
-        <PackageReference Include="ReportGenerator" Version="4.8.12" PrivateAssets="all" />
+        <PackageReference Include="coverlet.msbuild" Version="3.1.2" PrivateAssets="all" />
+        <PackageReference Include="ReportGenerator" Version="5.1.6" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
@@ -69,7 +74,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj"/>
+        <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj" />
     </ItemGroup>
 
     <Target Name="GenerateHtmlCoverageReport" AfterTargets="GenerateCoverageResultAfterTest">
