rename osx-x64 to osx, upgrade libsa for supported platforms
add props and targets for StirlingLabs.sockaddr.Net.csproj

drop support for .net 5 on osx

--- a/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
+++ b/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
@@ -28,10 +28,10 @@
         </When>
         <When Condition="$([MSBuild]::IsOSPlatform('OSX'))">
             <PropertyGroup>
-                <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
+                <RuntimeIdentifier>osx</RuntimeIdentifier>
             </PropertyGroup>
             <ItemGroup>
-                <ProjectReference Include="../libsa.osx-x64/osx-x64.csproj">
+                <ProjectReference Include="../libsa.osx/osx.csproj">
                     <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
                     <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
                 </ProjectReference>
