--- a/libsa.osx/osx.csproj
+++ b/libsa.osx/osx.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <PackageId>StirlingLabs.sockaddr.Net.runtime.osx-x64.libsa</PackageId>
         <AssemblyName>StirlingLabs.sockaddr.Net.runtime.osx-x64.libsa</AssemblyName>
-        <TargetFrameworks>net5.0;net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
-        <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
+        <TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <RuntimeIdentifier>osx</RuntimeIdentifier>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Nullable>enable</Nullable>
         <RootNamespace>libsa</RootNamespace>
