implement NuPkg test mode to test build targets and props
change LocalNuGetRepo to artifacts for use in NuPkg test mode

fix .editorconfig

reformat yml

--- a/libsa.linux-x64/linux-x64.csproj
+++ b/libsa.linux-x64/linux-x64.csproj
@@ -42,7 +42,7 @@
     <ItemGroup>
         <None Include="libsa.so">
             <Pack>True</Pack>
-            <PackageCopyToOutput>False</PackageCopyToOutput>
+            <PackageCopyToOutput>True</PackageCopyToOutput>
             <PackagePath>runtimes/linux-x64/native/</PackagePath>
             <Link>%(Identity)</Link>
         </None>
