--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,126 +1,167 @@
 name: Release
 
 on:
-    push:
-        tags:
-            - 'v*'
+  push:
+    tags:
+      - 'v*'
 
 defaults:
-    run:
-        shell: bash
+  run:
+    shell: bash
 
 jobs:
-    linux:
-        name: Linux
-        runs-on: ubuntu-20.04
-        steps:
-            -   uses: actions/checkout@v2
-                with:
-                    submodules: true
-            -   name: Fetch tag git metadata
-                run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
-            -   name: Check for .NET 6 preinstalled
-                id: dotnet_check
-                run: |
-                    compgen -G "~/.dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || \
-                    compgen -G "/usr/local/dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || \
-                    compgen -G "/usr/share/dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || true
-            -   uses: actions/setup-dotnet@v1.9.1
-                if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
-                with:
-                    dotnet-version: 6.0.x
-            -   name: NuGet Auth
-                uses: StirlingLabs/GithubNugetAuthAction@main
-            -   name: Build
-                run: dotnet build sockaddr.Net.sln -c Release
-            -   name: Test
-                run: dotnet test sockaddr.Net.sln --no-build -c Release --logger GitHubActions
-            -   name: Artifacts
-                uses: actions/upload-artifact@v2
-                with:
-                    name: sockaddr.Net
-                    path: |
-                        artifacts/*.nupkg
-                    if-no-files-found: error
-            -   name: Push NuGet Packages
-                run: dotnet nuget push artifacts/*.nupkg -k ${{github.token}} -s https://nuget.pkg.github.com/${{github.repository_owner}}/index.json -n 1 || true
-            -   name: Save coverage to storage branch
-                uses: StirlingLabs/BranchStorageAction@v21.07.3
-                with:
-                    comment: |
-                        Coverage for ${{github.ref}}
-                        Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-                        Commit: https://github.com/${{github.repository}}/commit/${{github.sha}}
-                    storage-branch: coverage
-                    src: coverage
-                    dst: coverage
-                    prune: true
-    macos:
-        name: Mac
-        runs-on: macos-11
-        steps:
-            -   uses: actions/checkout@v2
-                with:
-                    submodules: true
-            -   name: Fetch tag git metadata
-                run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
-            -   name: Check for .NET 6 preinstalled
-                id: dotnet_check
-                run: |
-                    compgen -G "~/.dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || \
-                    compgen -G "/usr/local/dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || \
-                    compgen -G "/usr/share/dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true" || true
-            -   uses: actions/setup-dotnet@v1.9.1
-                if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
-                with:
-                    dotnet-version: 6.0.x
-            -   name: NuGet Auth
-                uses: StirlingLabs/GithubNugetAuthAction@main
-            -   name: Test
-                run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
+  linux:
+    name: Linux
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Parse Version
+        id: v
+        uses: booxmedialtd/ws-action-parse-semver@v1
+        with:
+          input_string: ${{ github.ref }}
+          version_extractor_regex: ^refs\/tags\/v(.*)$
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Fetch tag git metadata
+        run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
+      - name: Check for .NET 6 preinstalled
+        id: dotnet_check
+        run: |
+          compgen -G "~/.dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || \
+          compgen -G "/usr/local/dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || \
+          compgen -G "/usr/share/dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || true
+      - uses: actions/setup-dotnet@v1.9.1
+        if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
+        with:
+          dotnet-version: 6.0.x
+      - name: NuGet Auth
+        uses: StirlingLabs/GithubNugetAuthAction@main
+      - name: Build
+        run: dotnet build sockaddr.Net.sln -c Release
+      - name: Test
+        run: dotnet test sockaddr.Net.sln --no-build -c Release -l:GitHubActions
+      - name: Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: sockaddr.Net
+          path: |
+            artifacts/*.nupkg
+          if-no-files-found: error
+      - name: Save coverage to storage branch
+        uses: StirlingLabs/BranchStorageAction@v21.07.3
+        with:
+          comment: |
+            Coverage for ${{github.ref}}
+            Action: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+            Commit: https://github.com/${{github.repository}}/commit/${{github.sha}}
+          storage-branch: coverage
+          src: coverage
+          dst: coverage
+          prune: true
+      - name: Clean
+        run: |
+          dotnet clean sockaddr.Net.sln
+          rm -rf **/{bin,obj}/**
+      - name: Test NuPkgs
+        run: |
+          dotnet restore sockaddr.Net.Tests -p:Configuration=Release -p:UseBuiltNuPkg=True
+          dotnet build sockaddr.Net.Tests -c Release --no-restore -p:UseBuiltNuPkg=True
+          dotnet test sockaddr.Net.Tests -c Release --no-restore --no-build -l:GitHubActions -p:UseBuiltNuPkg=True
+      - name: Push NuGet Packages
+        run: dotnet nuget push artifacts/*.nupkg -k ${{github.token}} -s https://nuget.pkg.github.com/${{github.repository_owner}}/index.json -n 1 || true
 
-    windows:
-        name: Windows
-        runs-on: windows-2022
-        steps:
-            -   uses: actions/checkout@v2
-                with:
-                    submodules: true
-            -   name: Fetch tag git metadata
-                run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
-            -   name: Check for .NET 6 preinstalled
-                id: dotnet_check
-                run: |
-                    compgen -G "/C/Program Files/dotnet/sdk/6.0.*" \
-                    && echo "::set-output name=has_6_0::true"
-            -   uses: actions/setup-dotnet@v1.9.1
-                if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
-                with:
-                    dotnet-version: 6.0.x
-            -   name: NuGet Auth
-                uses: StirlingLabs/GithubNugetAuthAction@main
-            -   name: Test
-                run: dotnet test sockaddr.Net.sln -c Release --logger GitHubActions
-
-    create_release:
-        name: Create Release
-        runs-on: ubuntu-20.04
-        needs: [ linux, macos, windows ]
-        steps:
-            -   uses: actions/download-artifact@v2
-                with:
-                    path: artifacts
-            -   name: Create Release
-                uses: softprops/action-gh-release@v0.1.12
-                with:
-                    name: sockaddr.Net
-                    files: |
-                        artifacts/**
-            -   name: Push NuGet Packages (NuGet.org)
-                run: dotnet nuget push artifacts/**/*.nupkg -k ${{secrets.NUGET_STIRLINGLABS_API_KEY}} -s https://api.nuget.org/v3/index.json -n 1 --skip-duplicate || true
+  macos:
+    name: Mac
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Fetch tag git metadata
+        run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
+      - name: Check for .NET 6 preinstalled
+        id: dotnet_check
+        run: |
+          compgen -G "~/.dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || \
+          compgen -G "/usr/local/dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || \
+          compgen -G "/usr/share/dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true" || true
+      - uses: actions/setup-dotnet@v1.9.1
+        if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
+        with:
+          dotnet-version: 6.0.x
+      - name: NuGet Auth
+        uses: StirlingLabs/GithubNugetAuthAction@main
+      - name: Test
+        run: dotnet test sockaddr.Net.sln -c Release -l:GitHubActions
+      - name: Clean
+        run: |
+          dotnet clean sockaddr.Net.sln
+          rm -rf **/{bin,obj}/**
+      - name: Test NuPkgs
+        run: |
+          dotnet restore sockaddr.Net.Tests -p:Configuration=Release -p:UseBuiltNuPkg=True
+          dotnet build sockaddr.Net.Tests -c Release --no-restore -p:UseBuiltNuPkg=True
+          dotnet test sockaddr.Net.Tests -c Release --no-restore --no-build -l:GitHubActions -p:UseBuiltNuPkg=True
+  
+  windows:
+    name: Windows
+    runs-on: windows-2022
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Fetch tag git metadata
+        run: git fetch --force --update-shallow --depth 1 origin +refs/tags/*:refs/tags/* || echo no tags
+      - name: Check for .NET 6 preinstalled
+        id: dotnet_check
+        run: |
+          compgen -G "/C/Program Files/dotnet/sdk/6.0.*" \
+          && echo "::set-output name=has_6_0::true"
+      - uses: actions/setup-dotnet@v1.9.1
+        if: ${{ steps.dotnet_check.outputs.has_6_0 != 'true' }}
+        with:
+          dotnet-version: 6.0.x
+      - name: NuGet Auth
+        uses: StirlingLabs/GithubNugetAuthAction@main
+      - name: Test
+        run: dotnet test sockaddr.Net.sln -c Release -l:GitHubActions
+      - name: Clean
+        run: |
+          dotnet clean sockaddr.Net.sln
+          rm -rf **/{bin,obj}/**
+      - name: Test NuPkgs
+        run: |
+          dotnet restore sockaddr.Net.Tests -p:Configuration=Release -p:UseBuiltNuPkg=True
+          dotnet build sockaddr.Net.Tests -c Release --no-restore -p:UseBuiltNuPkg=True
+          dotnet test sockaddr.Net.Tests -c Release --no-restore --no-build -l:GitHubActions -p:UseBuiltNuPkg=True
+  
+  create_release:
+    name: Create Release
+    runs-on: ubuntu-20.04
+    needs: [ linux, macos, windows ]
+    steps:
+      - name: Parse Version
+        id: v
+        uses: booxmedialtd/ws-action-parse-semver@v1
+        with:
+          input_string: ${{ github.ref }}
+          version_extractor_regex: ^refs\/tags\/v(.*)$
+      - uses: actions/download-artifact@v2
+        with:
+          path: artifacts
+      - name: Create Release
+        uses: softprops/action-gh-release@v0.1.12
+        with:
+          name: sockaddr.Net
+          files: |
+            artifacts/**
+      - name: Push NuGet Packages (NuGet.org)
+        if: steps.v.outputs.prerelease == ''
+        run: dotnet nuget push artifacts/**/*.nupkg -k ${{secrets.NUGET_STIRLINGLABS_API_KEY}} -s https://api.nuget.org/v3/index.json -n 1 --skip-duplicate || true
