--- a/libsa.win-x64/win-x64.csproj
+++ b/libsa.win-x64/win-x64.csproj
@@ -42,7 +42,7 @@
     <ItemGroup>
         <None Include="sa.dll">
             <Pack>True</Pack>
-            <PackageCopyToOutput>False</PackageCopyToOutput>
+            <PackageCopyToOutput>True</PackageCopyToOutput>
             <PackagePath>runtimes/win-x64/native/</PackagePath>
             <Link>%(Identity)</Link>
         </None>
