--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <add key="local" value="./LocalNuGetRepo" />
+        <add key="local" value="./artifacts" />
         <add key="GitHub-StirlingLabs" value="https://nuget.pkg.github.com/StirlingLabs/index.json" />
     </packageSources>
 </configuration>
