--- a/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
+++ b/sockaddr.Net.Tests/sockaddr.Net.Tests.csproj
@@ -15,23 +15,31 @@
         <RuntimeIdentifier>$(NETCoreSdkPortableRuntimeIdentifier)</RuntimeIdentifier>
     </PropertyGroup>
 
+    <ItemGroup Condition="'$(UseBuiltNuPkg)'!=''">
+        <PackageReference Include="StirlingLabs.sockaddr.Net" Version="*-*"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(UseBuiltNuPkg)'==''">
+        <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj"/>
+    </ItemGroup>
+
     <Choose>
         <When Condition="$(RuntimeIdentifier.StartsWith('linux'))">
-            <ItemGroup>
+            <ItemGroup Condition="'$(UseBuiltNuPkg)'==''">
                 <ProjectReference Include="../libsa.linux-x64/linux-x64.csproj">
                     <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
                 </ProjectReference>
             </ItemGroup>
         </When>
         <When Condition="$(RuntimeIdentifier.StartsWith('osx'))">
-            <ItemGroup>
+            <ItemGroup Condition="'$(UseBuiltNuPkg)'==''">
                 <ProjectReference Include="../libsa.osx/osx.csproj">
                     <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
                 </ProjectReference>
             </ItemGroup>
         </When>
         <When Condition="$(RuntimeIdentifier.StartsWith('win'))">
-            <ItemGroup>
+            <ItemGroup Condition="'$(UseBuiltNuPkg)'==''">
                 <ProjectReference Include="../libsa.win-x64/win-x64.csproj">
                     <SetTargetFramework>TargetFramework=$(TargetFramework)</SetTargetFramework>
                 </ProjectReference>
@@ -40,35 +48,33 @@
     </Choose>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="coverlet.collector" Version="3.1.2" PrivateAssets="all">
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="StirlingLabs.BigSpans" Version="22.5.0" />
-        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="22.5.0" />
-        <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="3.1.0" PrivateAssets="all" />
-        <PackageReference Include="coverlet.msbuild" Version="3.1.2" PrivateAssets="all" />
-        <PackageReference Include="ReportGenerator" Version="5.1.6" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+        <PackageReference Include="NUnit" Version="3.13.3"/>
+        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
+        <PackageReference Include="StirlingLabs.BigSpans" Version="22.5.0"/>
+        <PackageReference Include="StirlingLabs.BigSpans.NUnit" Version="22.5.0"/>
+        <PackageReference Include="coverlet.collector" Version="3.1.2" PrivateAssets="all"/>
+        <PackageReference Include="GitHubActionsTestLogger" Version="1.4.1" PrivateAssets="all"/>
+        <PackageReference Include="coverlet.collector" Version="3.1.0" PrivateAssets="all"/>
+        <PackageReference Include="coverlet.msbuild" Version="3.1.2" PrivateAssets="all"/>
+        <PackageReference Include="ReportGenerator" Version="5.1.6" PrivateAssets="all"/>
     </ItemGroup>
 
     <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\sockaddr.Net\sockaddr.Net.csproj" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
     </ItemGroup>
 
     <Target Name="GenerateHtmlCoverageReport" AfterTargets="GenerateCoverageResultAfterTest">
         <!-- generate markdown coverage report and badges -->
-        <ReportGenerator ReportFiles="@(CoverletReport)" ReportTypes="MarkdownSummary;Badges" SourceDirectories="../sockaddr.Net" TargetDirectory="../coverage/" />
+        <ReportGenerator ReportFiles="@(CoverletReport)" ReportTypes="MarkdownSummary;Badges" SourceDirectories="../sockaddr.Net" TargetDirectory="../coverage/"/>
+    </Target>
+
+    <Target Name="ListPackageReferencesBeforeCoreCompile" BeforeTargets="Build">
+        <Message Importance="high" Text="PackageReferences: @(PackageReference)"/>
+    </Target>
+    <Target Name="ListReferencesBeforeCoreCompile" BeforeTargets="Build">
+        <Message Importance="high" Text="References: @(Reference)"/>
     </Target>
 
 </Project>
